--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>みかんの Hotel Stay Review</title>
-<meta name="keywords" content="ページのキーワードA,B,C">
-<meta name="description" content="ページの説明">
+<meta name="description" content="国内外のホテルについて、実際の滞在体験をもとに立地・客室・設備などをレビューする個人運営の宿泊情報サイトです。">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="index.css">
 </head>
@@ -16,12 +15,17 @@
 <div id="content-wrapper">
 <main>
 <div id="inner">
+  <p>
+  ▶ <a href="guam-reef-hotel.html">【宿泊記】グアム・リーフ・ホテル</a>
+</p>
+<!--
 <h2>記事ページ見出し・大</h2>
 <p>文章あれこれ</p>
 <h3>記事ページ見出し・中</h3>
 <p>文章あれこれ</p>
 <h4>記事ページ見出し・小</h4>
 <p>文章あれこれ</p>
+-->
 </div>
 </main>
 <aside>
@@ -29,13 +33,16 @@
 <div class="side-title">menu</div>
 <div class="side">
 <ul>
-<li>記事ページへのリンク</li>
-<li>記事ページへのリンク</li>
+  <li>
+    <a href="guam-reef-hotel.html">
+      【宿泊記】グアム・リーフ・ホテル
+    </a>
+  </li>
 </ul>
 </div>
 </div>
 </aside>
 </div>
-<footer>© 2010 あなたのホームページ</footer>
+<footer>© 2026 みかんの Hotel Stay Review</footer>
 </div></body>
 </html>
