--- a/guam-reef-hotel.html
+++ b/guam-reef-hotel.html
@@ -1,41 +1,99 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<meta charset="UTF-8">
-<title>Guam Reef Hotel</title>
-<meta name="keywords" content="ページのキーワードA,B,C">
-<meta name="description" content="ページの説明">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="index.css">
+  <meta charset="UTF-8">
+  <title>【宿泊記】グアム・リーフ・ホテル | みかんの Hotel Stay Review</title>
+  <meta name="description" content="2025年12月に宿泊したグアム・リーフ・ホテルの宿泊記。立地、客室、眺望、設備、良かった点・気になった点をまとめます。">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
 <div id="outer">
-<header><div id="header-container"><div id="head-inner"><h1>Guam Reef Hotel</h1>
-<p class="description">2025年12月にグアムで宿泊したGuam Reef Hotelのレビューです</p></div></div>
-</header>
-<div id="content-wrapper">
-<main>
-<div id="inner">
-<h2>記事ページ見出し・大</h2>
-<p>文章あれこれ</p>
-<h3>記事ページ見出し・中</h3>
-<p>文章あれこれ</p>
-<h4>記事ページ見出し・小</h4>
-<p>文章あれこれ</p>
+
+  <header>
+    <div id="header-container">
+      <div id="head-inner">
+        <h1>【宿泊記】グアム・リーフ・ホテル（Guam Reef Hotel）</h1>
+        <p class="description">2025年12月にグアムで宿泊。立地・客室・設備・良かった点／気になった点をまとめたレビューです。</p>
+        <p><a href="index.html">← トップへ戻る</a></p>
+      </div>
+    </div>
+  </header>
+
+  <div id="content-wrapper">
+    <main>
+      <div id="inner">
+
+        <p><strong>結論：</strong>【一言で評価：例「立地重視の人に向く」「コスパ良い」「景色が強い」など】</p>
+
+        <h2>基本情報（宿泊時期・部屋タイプなど）</h2>
+        <ul>
+          <li>宿泊時期：2025年12月</li>
+          <li>人数：【例：1人 / 2人】</li>
+          <li>部屋タイプ：【例：オーシャンビュー / スタンダード】</li>
+          <li>予約経路：【例：予約サイト（比較して決定）】</li>
+        </ul>
+
+        <h2>立地・アクセス</h2>
+        <p>【例：タモン中心部との距離感、徒歩圏の店、移動手段など】</p>
+
+        <h2>客室（広さ・設備・眺望・清潔感）</h2>
+        <h3>部屋の印象</h3>
+        <p>【第一印象、広さ、古さ/新しさ、清掃など】</p>
+        <h3>設備</h3>
+        <ul>
+          <li>ベッド：【】</li>
+          <li>バス・トイレ：【】</li>
+          <li>Wi-Fi：【】</li>
+          <li>コンセント：【】</li>
+        </ul>
+        <h3>眺望</h3>
+        <p>【オーシャンビューなら景色、夕日など】</p>
+
+        <h2>館内施設（プール・レストラン等）</h2>
+        <p>【プール、ビーチアクセス、朝食、売店など】</p>
+
+        <h2>良かった点</h2>
+        <ul>
+          <li>【良かった点1】</li>
+          <li>【良かった点2】</li>
+          <li>【良かった点3（任意）】</li>
+        </ul>
+
+        <h2>気になった点</h2>
+        <ul>
+          <li>【気になった点1：小さめでOK】</li>
+          <li>【気になった点2（任意）】</li>
+        </ul>
+
+        <h2>こんな人におすすめ</h2>
+        <ul>
+          <li>【例：タモン中心で動きたい】</li>
+          <li>【例：海の景色を重視】</li>
+          <li>【例：コスパ重視】</li>
+        </ul>
+
+        <h2>予約メモ</h2>
+        <p>宿泊料金やキャンセル条件は時期で変わるので、主要予約サイトで比較して決めるのが安心です。</p>
+
+      </div>
+    </main>
+
+    <aside>
+      <div id="middle-inner">
+        <div class="side-title">menu</div>
+        <div class="side">
+          <ul>
+            <li><a href="index.html">トップ</a></li>
+            <li><a href="guam-reef-hotel.html">グアム・リーフ・ホテル</a></li>
+            <!-- about/contact/privacy を作ったらここに足す -->
+          </ul>
+        </div>
+      </div>
+    </aside>
+  </div>
+
+  <footer>© 2026 みかんの Hotel Stay Review</footer>
 </div>
-</main>
-<aside>
-<div id="middle-inner">
-<div class="side-title">menu</div>
-<div class="side">
-<ul>
-<li>記事ページへのリンク</li>
-<li>記事ページへのリンク</li>
-</ul>
-</div>
-</div>
-</aside>
-</div>
-<footer>© 2010 あなたのホームページ</footer>
-</div></body>
+</body>
 </html>
