--- a/guam-reef-hotel.html
+++ b/guam-reef-hotel.html
@@ -24,53 +24,52 @@
     <main>
       <div id="inner">
 
-        <p><strong>結論：</strong>【一言で評価：例「立地重視の人に向く」「コスパ良い」「景色が強い」など】</p>
+        <p><strong>結論：</strong>タモン中心で動きやすく、ビーチ直結＆インフィニティプールも楽しめるのに、価格は比較的リーズナブル。立地重視の人におすすめです。</p>
 
         <h2>基本情報（宿泊時期・部屋タイプなど）</h2>
         <ul>
           <li>宿泊時期：2025年12月</li>
-          <li>人数：【例：1人 / 2人】</li>
-          <li>部屋タイプ：【例：オーシャンビュー / スタンダード】</li>
-          <li>予約経路：【例：予約サイト（比較して決定）】</li>
+          <li>人数：2人</li>
+          <li>部屋タイプ：ビーチタワー　オーシャンツイン</li>
+          <li>予約経路：グアムリーフホテル公式サイト</li>
         </ul>
 
         <h2>立地・アクセス</h2>
-        <p>【例：タモン中心部との距離感、徒歩圏の店、移動手段など】</p>
+        <p>タモン中心部にあり、食事や買い物に出やすい便利な立地です。</p>
 
         <h2>客室（広さ・設備・眺望・清潔感）</h2>
         <h3>部屋の印象</h3>
-        <p>【第一印象、広さ、古さ/新しさ、清掃など】</p>
+        <p>オーシャンビューで眺望が良く、バルコニーに机と椅子があるのが便利でした。部屋の広さも2人なら十分です。</p>
         <h3>設備</h3>
         <ul>
-          <li>ベッド：【】</li>
-          <li>バス・トイレ：【】</li>
-          <li>Wi-Fi：【】</li>
-          <li>コンセント：【】</li>
+          <li>ベッド：ツイン（2台）</li>
+          <li>バス・トイレ：一体型</li>
+          <li>Wi-Fi：あり</li>
+          <li>コンセント：あり</li>
         </ul>
         <h3>眺望</h3>
-        <p>【オーシャンビューなら景色、夕日など】</p>
+        <p>部屋からサンセットを見ることができ、夕方の時間帯は特に印象的でした。</p>
 
         <h2>館内施設（プール・レストラン等）</h2>
-        <p>【プール、ビーチアクセス、朝食、売店など】</p>
+        <p>インフィニティプールあり。タモンビーチまではプールから降りてすぐ。朝食は簡単だけど十分に種類あり。売店もあり</p>
 
         <h2>良かった点</h2>
         <ul>
-          <li>【良かった点1】</li>
-          <li>【良かった点2】</li>
-          <li>【良かった点3（任意）】</li>
+          <li>①ビーチサイドにある割には比較的リーズナブル</li>
+          <li>②タモン中心地にあるので外食や買い物などに便利</li>
+          <li>③インフィニティプールあり。ビーチタオルレンタル無料</li>
         </ul>
 
         <h2>気になった点</h2>
         <ul>
-          <li>【気になった点1：小さめでOK】</li>
-          <li>【気になった点2（任意）】</li>
+          <li>建物はやや年季がありますが、滞在に支障はありませんでした。</li>
         </ul>
 
         <h2>こんな人におすすめ</h2>
         <ul>
-          <li>【例：タモン中心で動きたい】</li>
-          <li>【例：海の景色を重視】</li>
-          <li>【例：コスパ重視】</li>
+          <li>タモン中心街で食事や買い物をしたい人</li>
+          <li>インフィニティプールで泳ぎたい人</li>
+          <li>ホテルからビーチにすぐ出たい人</li>
         </ul>
 
         <h2>予約メモ</h2>
