--- a/guam-reef-hotel.html
+++ b/guam-reef-hotel.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>【宿泊記】グアム・リーフ・ホテル | みかんの Hotel Stay Review</title>
+  <title>【宿泊記】グアム・リーフ・ホテル（Guam Reef Hotel） | みかんの Hotel Stay Review</title>
   <meta name="description" content="2025年12月に宿泊したグアム・リーフ・ホテルの宿泊記。立地、客室、眺望、設備、良かった点・気になった点をまとめます。">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="index.css">
@@ -51,13 +51,13 @@
         <p>部屋からサンセットを見ることができ、夕方の時間帯は特に印象的でした。</p>
 
         <h2>館内施設（プール・レストラン等）</h2>
-        <p>インフィニティプールあり。タモンビーチまではプールから降りてすぐ。朝食は簡単だけど十分に種類あり。売店もあり</p>
+        <p>インフィニティプールがあります。タモンビーチへはプールから降りてすぐ。朝食はシンプルですが種類は十分で、売店もあります。</p>
 
         <h2>良かった点</h2>
         <ul>
-          <li>①ビーチサイドにある割には比較的リーズナブル</li>
-          <li>②タモン中心地にあるので外食や買い物などに便利</li>
-          <li>③インフィニティプールあり。ビーチタオルレンタル無料</li>
+          <li>ビーチサイドにある割には比較的リーズナブル</li>
+          <li>タモン中心地にあるので外食や買い物などに便利</li>
+          <li>インフィニティプールあり。ビーチタオルレンタル無料</li>
         </ul>
 
         <h2>気になった点</h2>
@@ -73,7 +73,7 @@
         </ul>
 
         <h2>予約メモ</h2>
-        <p>宿泊料金やキャンセル条件は時期で変わるので、主要予約サイトで比較して決めるのが安心です。</p>
+        <p>予約時は料金や条件が変わるので、公式サイトとあわせて主要予約サイトでも価格を比較して決めるのがおすすめです。</p>
 
       </div>
     </main>
