--- a/guam-reef-hotel.html
+++ b/guam-reef-hotel.html
@@ -50,8 +50,32 @@
         <h3>眺望</h3>
         <p>部屋からサンセットを見ることができ、夕方の時間帯は特に印象的でした。</p>
 
+<div class="photo-set">
+  <figure>
+    <img src="reef-room-dayview.jpg" alt="グアム・リーフ・ホテル客室バルコニーからのオーシャンビュー">
+    <figcaption>昼間のオーシャンビュー（バルコニーにテーブルと椅子あり）</figcaption>
+  </figure>
+
+  <figure>
+    <img src="reef-room-sunset.jpg" alt="グアム・リーフ・ホテル客室バルコニーからのサンセット">
+    <figcaption>客室バルコニーからのサンセット</figcaption>
+ </figure>
+</div>
+
         <h2>館内施設（プール・レストラン等）</h2>
         <p>インフィニティプールがあります。タモンビーチへはプールから降りてすぐ。朝食はシンプルですが種類は十分で、売店もあります。</p>
+
+<div class="photo-set">
+  <figure>
+    <img src="reef-infinity-pool.jpg" alt="グアム・リーフ・ホテルのインフィニティプール">
+    <figcaption>インフィニティプール（ビーチ直結）</figcaption>
+  </figure>
+
+  <figure>
+    <img src="reef-tumon-beach.jpg" alt="グアム・リーフ・ホテル前のタモンビーチ">
+    <figcaption>ホテル前のタモンビーチ</figcaption>
+  </figure>
+</div>
 
         <h2>良かった点</h2>
         <ul>
