--- a/guam-reef-hotel.html
+++ b/guam-reef-hotel.html
@@ -81,7 +81,7 @@
         <ul>
           <li>ビーチサイドにある割には比較的リーズナブル</li>
           <li>タモン中心地にあるので外食や買い物などに便利</li>
-          <li>インフィニティプールあり。ビーチタオルレンタル無料</li>
+          <li>インフィニティプールがあり、ビーチタオルのレンタルも無料</li>
         </ul>
 
         <h2>気になった点</h2>
