--- a/guam-reef-hotel.html
+++ b/guam-reef-hotel.html
@@ -52,12 +52,12 @@
 
 <div class="photo-set">
   <figure>
-    <img src="guamreef-room-dayview.jpg" alt="グアム・リーフ・ホテル客室バルコニーからのオーシャンビュー">
+    <img src="guamreef-room-dayview.jpeg" alt="グアム・リーフ・ホテル客室バルコニーからのオーシャンビュー">
     <figcaption>昼間のオーシャンビュー（バルコニーにテーブルと椅子あり）</figcaption>
   </figure>
 
   <figure>
-    <img src="guamreef-room-sunset.jpg" alt="グアム・リーフ・ホテル客室バルコニーからのサンセット">
+    <img src="guamreef-room-sunset.jpeg" alt="グアム・リーフ・ホテル客室バルコニーからのサンセット">
     <figcaption>客室バルコニーからのサンセット</figcaption>
  </figure>
 </div>
@@ -67,12 +67,12 @@
 
 <div class="photo-set">
   <figure>
-    <img src="guamreef-infinity-pool.jpg" alt="グアム・リーフ・ホテルのインフィニティプール">
+    <img src="guamreef-infinity-pool.jpeg" alt="グアム・リーフ・ホテルのインフィニティプール">
     <figcaption>インフィニティプール（ビーチ直結）</figcaption>
   </figure>
 
   <figure>
-    <img src="guamreef-tumon-beach.jpg" alt="グアム・リーフ・ホテル前のタモンビーチ">
+    <img src="guamreef-tumon-beach.jpeg" alt="グアム・リーフ・ホテル前のタモンビーチ">
     <figcaption>ホテル前のタモンビーチ</figcaption>
   </figure>
 </div>
