--- a/guam-reef-hotel.html
+++ b/guam-reef-hotel.html
@@ -42,10 +42,7 @@
         <p>オーシャンビューで眺望が良く、バルコニーに机と椅子があるのが便利でした。部屋の広さも2人なら十分です。</p>
         <h3>設備</h3>
         <ul>
-          <li>ベッド：ツイン（2台）</li>
-          <li>バス・トイレ：一体型</li>
-          <li>Wi-Fi：あり</li>
-          <li>コンセント：あり</li>
+          <li>ツインベッドの部屋で、バス・トイレは一体型。Wi-Fiやコンセントも十分でした。</li>
         </ul>
         <h3>眺望</h3>
         <p>部屋からサンセットを見ることができ、夕方の時間帯は特に印象的でした。</p>
@@ -97,7 +94,7 @@
         </ul>
 
         <h2>予約メモ</h2>
-        <p>予約時は料金や条件が変わるので、公式サイトとあわせて主要予約サイトでも価格を比較して決めるのがおすすめです。</p>
+        <p>Booking.comなど 3 サイトで価格を比較し、キャンセル条件を事前に確認するのが安心です</p>
 
       </div>
     </main>
