--- a/index.html
+++ b/index.html
@@ -38,7 +38,13 @@
       【宿泊記】グアム・リーフ・ホテル
     </a>
   </li>
+  <li>
+    <a href="contact.html">
+      お問い合わせ
+    </a>
+  </li>
 </ul>
+
 </div>
 </div>
 </aside>
