--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
 
         <p>
           ▶ <strong>
-            <a href="https://docs.google.com/forms/" target="_blank" rel="noopener">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSfh-4oHp9nTIcT5k_-a4FzU02P3xAIE7qjHu-vlYaYpgdyVOA/viewform?usp=header" target="_blank" rel="noopener">
               お問い合わせフォームはこちら（Googleフォーム）
             </a>
           </strong>
