--- a/guam-reef-hotel.html
+++ b/guam-reef-hotel.html
@@ -26,12 +26,20 @@
 
         <p><strong>結論：</strong>タモン中心で動きやすく、ビーチ直結＆インフィニティプールも楽しめるのに、価格は比較的リーズナブル。立地重視の人におすすめです。</p>
 
+<p class="booking-link">
+  ▶ <strong>【グアム・リーフ・ホテル（Booking.com）】</strong><br>
+  <a href="https://www.awin1.com/cread.php?awinmid=18117&awinaffid=2709066&ued=https%3A%2F%2Fwww.booking.com%2Fhotel%2Fgu%2Fguam-reef.ja.html" target="_blank" rel="nofollow sponsored">
+    空室・料金をチェックする
+  </a>
+</p>
+
+        
         <h2>基本情報（宿泊時期・部屋タイプなど）</h2>
         <ul>
           <li>宿泊時期：2025年12月</li>
           <li>人数：2人</li>
           <li>部屋タイプ：ビーチタワー　オーシャンツイン</li>
-          <li>予約経路：グアムリーフホテル公式サイト</li>
+          <li>予約経路：今回の宿泊はグアムリーフホテル公式サイト（参考：空室・料金比較用にBooking.comリンクも掲載）</li>
         </ul>
 
         <h2>立地・アクセス</h2>
@@ -93,9 +101,16 @@
           <li>ホテルからビーチにすぐ出たい人</li>
         </ul>
 
-        <h2>予約メモ</h2>
-        <p>Booking.comなど 3 サイトで価格を比較し、キャンセル条件を事前に確認するのが安心です</p>
+<h2>予約メモ</h2>
+<p>
+Booking.comなど 3 サイトで価格を比較し、キャンセル条件を事前に確認するのが安心です。<br>
+▶ <a href="https://www.awin1.com/cread.php?awinmid=18117&awinaffid=2709066&ued=https%3A%2F%2Fwww.booking.com%2Fhotel%2Fgu%2Fguam-reef.ja.html"
+   target="_blank" rel="nofollow sponsored">
+グアム・リーフ・ホテル（Booking.com）
+</a>
+</p>
 
+        
       </div>
     </main>
 
@@ -113,6 +128,10 @@
     </aside>
   </div>
 
+<p class="affiliate-note">
+※当サイトはBooking.comのアフィリエイトプログラムを利用しています。
+</p>
+  
   <footer>© 2026 みかんの Hotel Stay Review</footer>
 </div>
 </body>
